Bootstrap JS code  added to ensure navbar closes once clicked on small screens

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -38,8 +38,7 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding-top:4rem; /*to prevent navbar overlap*/
 }
 
 /* Buttons */
